--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -104,7 +104,7 @@
   &__tickets {
     display: flex;
     box-sizing: border-box;
-    width: 230px;
+    width: 100%;
     height: $size;
     @include onDesktop {
       height: $desktop;
