--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -1,7 +1,6 @@
 .current-events {
   display: flex;
   justify-content: center;
-  
 
   &__title {
     @include onDesktop {
@@ -35,6 +34,11 @@
     @include onDesktop {
       height: 520px;
       margin-bottom: 104px;
+      transition: transform 0.3s;
+
+      &:hover {
+        transform: scale(1.06);
+      }
     }
   }
 
