--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -22,7 +22,7 @@
   }
 
   &__top-content {
-    width: 160px;
+    width: 50%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,13 +32,13 @@
       padding-left: 23px;
     }
     @include onTablet {
-      width: 500px;
+      width: 65%;
       justify-content: space-between;
       padding-top: 15px;
       padding-left: 0;
     }
     @include onDesktop {
-      width: 640px;
+      width: 50%;
       justify-content: space-between;
       padding-top: 15px;
       padding-left: 0;
