--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,8 +1,8 @@
 .menu {
-  max-width: 1435px;
+  width: 100%;
   background-color: $colorgreen;
   height: 399px;
-  padding: 27px 20px;
+  
   z-index: 1;
   &::after {
     content: "";
@@ -38,6 +38,7 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+    padding-right: 20px;
     @include onTablet {
       display: flex;
       flex-direction: row;
@@ -82,6 +83,7 @@
   }
 
   &__line {
+    box-sizing: border-box;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     @include onTablet {
       border-right: 1px solid rgba(255, 255, 255, 0.5);
