--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -2,7 +2,7 @@
   max-width: 1170px;
   margin: 0 auto;
   @include onMobile {
-    padding: 0;
+    padding: 27px 20px;
   }
   @include onTablet {
     padding: 0 0 0 39px;
@@ -13,7 +13,7 @@
   }
 
   &__header {
-    max-width: 1280px;
+    width: 100%;
     margin: 0 auto;
     @include onTablet {
       padding: 0 0 0 37px;
@@ -30,7 +30,7 @@
   }
 
   &__classicism-to-romanticism {
-    max-width: 1280px;
+    width: 100%;
     margin: 0 auto;
   }
 
