--- a/src/styles/blocks/link.scss
+++ b/src/styles/blocks/link.scss
@@ -5,8 +5,12 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 100%;
+  transition: 0.3s;
   @include onDesktop {
     font-size: 22px;
+  }
+  &:hover {
+    color: $black;
   }
 
   &__footer {
