--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -8,6 +8,7 @@
   background-image: url(../images/photos/subscribe.png);
   background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
   @include onTablet {
     height: 380px;
   }
