--- a/src/styles/blocks/galery.scss
+++ b/src/styles/blocks/galery.scss
@@ -47,6 +47,11 @@
         width: 340px;
       }
       @include onDesktop {
+        transition: transform 0.3s;
+
+        &:hover {
+          transform: scale(1.1);
+        }
         height: inherit;
         width: inherit;
       }
@@ -65,17 +70,12 @@
     }
 
     &--block {
-      @include onDesktop {
-        transition: transform 0.3s;
-        &:hover {
-          transform: scale(1.06);
-          z-index: 1;
-        }
-      }
+
       @include onDesktop {
         display: block;
         height: 600px;
         width: 100%;
+        overflow: hidden;
         &:nth-child(2) {
           display: none;
         }
