--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -11,9 +11,27 @@
     max-height: 457px;
     padding: 0 58px;
   }
+  &__menu {
+    max-width: 7680px;
+    margin: 0 auto;
+
+    @include onMobile {
+      padding: 27px 20px;
+    }
+
+    @include onTablet {
+      padding: 0 39px;
+    }
+
+    @include onDesktop {
+      margin: 0;
+      max-height: 457px;
+      padding: 0 58px;
+    }
+  }
 
   &__header {
-    width: 100%;
+    max-width: 7680px;
     margin: 0 auto;
     @include onTablet {
       padding: 0 0 0 37px;
