--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -45,14 +45,16 @@
       padding-left: 0;
     }
   }
+
   &__icon {
     display: block;
     width: 18px;
-
   }
+
   &__logo {
     height: 61px;
   }
+
   &__text {
     margin-top: 20px;
     font-weight: 700;
@@ -90,6 +92,8 @@
     margin: 20px 20px 70px;
     justify-content: center;
     align-items: center;
+    text-decoration: none;
+
     @include onTablet {
       display: flex;
       justify-content: start;
@@ -107,6 +111,13 @@
     box-sizing: border-box;
     width: 100%;
     height: $size;
+    text-decoration: none;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    color: $black;
+
     @include onDesktop {
       height: $desktop;
       width: 200px;
@@ -133,9 +144,10 @@
     align-items: center;
     background-color: $colorgreen;
     transition: all 0.3s;
-    &:hover {
-      background-color: #278b76;
-    }
+  }
+  
+  &__sendform:hover &__button {
+    background-color: #278b76;
   }
   &__events {
     @include onMobile {
