--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -15,7 +15,6 @@ h5,
 h6,
 p,
 pre,
-a,
 address,
 big,
 cite,
@@ -110,4 +109,10 @@ table {
 
 [hidden] {
   display: none;
+}
+
+a {
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
 }
