--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 386px;
-  width: 100%;
+  max-width: 1920px;
   margin-bottom: 50px;
   background-image: url(../images/photos/subscribe.png);
   background-position: center;
