--- a/src/styles/blocks/classicism-to-romanticism.scss
+++ b/src/styles/blocks/classicism-to-romanticism.scss
@@ -1,8 +1,9 @@
 .classicism-to-romanticism {
-  margin-bottom: 183px;
   background-image: url(../images/photos/picture_action3.png);
   height: 210px;
   width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
