--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -29,6 +29,7 @@
     align-items: center;
     padding-top: 9px;
     position: absolute;
+    max-width: 1020px;
     @include onMobile {
       padding-left: 23px;
     }
@@ -145,7 +146,7 @@
     background-color: $colorgreen;
     transition: all 0.3s;
   }
-  
+
   &__sendform:hover &__button {
     background-color: #278b76;
   }
