--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -54,6 +54,12 @@
   &__messengers {
     display: flex;
     gap: 26px;
+    &--link {
+      &:hover {
+        animation: circle 0.7s;
+        transform-origin: center;
+      }
+    }
   }
 
   &__working-time {
