museum landing page was created

--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -3,10 +3,10 @@
   grid-template-columns: repeat(2, 1fr);
   column-gap: 20px;
 
-  // @include onTablet {
-  //   grid-template-columns: repeat(6, 1fr);
-  //   column-gap: 30px;
-  // }
+  @include onTablet {
+    grid-template-columns: repeat(6, 1fr);
+    column-gap: 30px;
+  }
 
   @include onDesktop {
     grid-template-columns: repeat(12, 1fr);
@@ -17,6 +17,14 @@
     display: block;
 
     @include onDesktop {
+      display: grid;
+    }
+  }
+
+  &--tablet {
+    display: block;
+
+    @include onTablet {
       display: grid;
     }
   }
