--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,5 +1,4 @@
 .gallery {
-  position: relative;
 
   &__title {
     font-size: 36px;
@@ -46,6 +45,7 @@
     display: flex;
     flex-direction: row;
 
+    overflow: hidden;
     gap: 30px;
 
     @include onDesktop {
