added some new changes

--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -1,19 +1,32 @@
 .art-museum {
-  @include onTablet {
-    width: 354px;
-  }
+  position: relative;
 
   @include onDesktop {
     width: 470px;
   }
 
   &__title {
-    margin-bottom: 20px;
-    color: $black-text-color;
+    width: 280px;
+    margin: 0 auto 20px;
+
     font-size: 45px;
     line-height: 100%;
     text-align: center;
     text-transform: uppercase;
+    color: $black-text-color;
+
+    @include onTablet {
+      width: 340px;
+
+      font-size: 54px;
+      line-height: 120%;
+    }
+
+    @include onDesktop {
+      width: 470px;
+
+      font-size: 72px;
+    }
 
     @include onTablet {
       margin: 127px 0 38px;
@@ -25,9 +38,6 @@
 
     @include onDesktop {
       margin: 206px 0 89px;
-    }
-
-    @include onDesktop {
       font-size: 72px;
     }
   }
@@ -37,16 +47,19 @@
 
     height: 50px;
     width: 280px;
+    margin: 0 auto;
+
     border: 1px solid $green-button-color;
     text-decoration: none;
 
     @include onTablet {
       height: 70px;
       width: 270px;
+      margin: 0 70px 0 0;
     }
 
     @include onDesktop {
-      margin-left: 200px;
+      margin: 0 0 0 200px;
     }
   }
 
@@ -63,11 +76,15 @@
     line-height: 100%;
     color: $black-text-color;
     text-transform: uppercase;
+
+    @include onTablet {
+      width: 200px;
+    }
   }
 
   &__detail {
     position: absolute;
-    left: 0;
+    left: -60px;
     bottom: 60px;
 
     display: none;
