--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -17,5 +17,10 @@
 
     color: $black-text-color;
     text-decoration: none;
+    transition: color 0.3s;
+
+    &:hover {
+      color: $red-square-color;
+    }
   }
 }
