--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -23,6 +23,10 @@
     }
   }
 
+  &__photo-block {
+    overflow: hidden;
+  }
+
   &__image {
     display: block;
     width: 280px;
@@ -46,7 +50,9 @@
     }
 
     &:hover {
-      transform: scale(1.1);
+      @include onDesktop {
+        transform: scale(1.1);
+      }
     }
   }
 
