--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -6,8 +6,12 @@
 
   @include onTablet {
     height: min-content;
-    width: auto;
+    width: 220px;
     gap: 20px 24px;
+  }
+
+  @include onDesktop {
+    width: 368px;
   }
 
   @include onDesktop {
@@ -43,6 +47,14 @@
     line-height: 100%;
     color: $white-text-color;
     text-decoration: none;
+
+    transition: color 0.3s;
+
+    &:hover {
+      @include onDesktop {
+        color: $red-square-color;
+      }
+    }
 
     @include onDesktop {
       font-size: 22px;
