--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -5,11 +5,6 @@
     &--with-menu {
       overflow: hidden;
 
-      .header__icon {
-        display: none;
-        position: static;
-      }
-
       .events__photo {
         position: relative;
         z-index: -10;
@@ -54,13 +49,16 @@
   }
 
   &__section {
-    margin-bottom: 60px;
+    width: 320px;
+    margin: 0 auto 60px;
 
     @include onTablet {
+      width: 768px;
       margin-bottom: 112px;
     }
 
     @include onDesktop {
+      width: 1280px;
       margin-bottom: 104px;
     }
 
@@ -115,6 +113,19 @@
       @include onDesktop {
         margin-bottom: 56px;
       }
+    }
+  }
+
+  &__footer {
+    width: 320px;
+    margin: 0 auto;
+
+    @include onTablet {
+      width: 768px;
+    }
+
+    @include onDesktop {
+      width: 1280px;
     }
   }
 }
