--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -14,6 +14,7 @@
   &__photo {
     margin-bottom: 10px;
     height: max-content;
+    overflow: hidden;
 
     @include onTablet {
       margin-bottom: 40px;
@@ -39,7 +40,9 @@
     }
 
     &:hover {
-      transform: scale(1.1);
+      @include onDesktop {
+        transform: scale(1.1);
+      }
     }
   }
 
