--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -6,6 +6,7 @@
   background-position: center;
   background-repeat: no-repeat;
   cursor: pointer;
+  transition: background-color 0.3s;
 
   @include onTablet {
     height: 70px;
