--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -73,6 +73,11 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &__instagram {
@@ -83,6 +88,12 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &__information {
