--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -9,6 +9,10 @@
         position: relative;
         z-index: -10;
       }
+
+      .menu {
+        z-index: 2;
+      }
     }
   }
 
@@ -44,7 +48,7 @@
       right: 0;
       height: 100vh;
       background-color: rgba(0, 0, 0, 0.5);
-      z-index: 2;
+      z-index: 0;
     }
   }
 
