--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,4 @@
-$c-gray: #eee;
+$height-menu: min-content;
+$color-white: rgb(255, 255, 255);
+$color-dark: rgb(15, 14, 8);
+$color-green: rgb(26, 90, 76);
