--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -11,6 +11,8 @@
   color: $color-dark;
   border: 1px solid $color-green;
 
+  @include hover(transform, scale(1.01));
+
   &::after {
     position: absolute;
     top: 0;
@@ -35,9 +37,11 @@
       font-weight: 700;
       font-size: 14px;
       line-height: 14px;
-      color: #687480;
+      color: rgb(104, 116, 128);
       transform: rotate(-90deg) translateX(-120%);
       transform-origin: top left;
+
+      @include hover(color, $color-green);
 
       &::before {
         content: "";
