--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -10,13 +10,6 @@
     outline: none;
     padding: 24px 18px;
 
-    &:-webkit-autofill,
-    &:-webkit-autofill:hover,
-    &:-webkit-autofill:focus {
-      background-color: blue !important;
-      color: $color-dark;
-    }
-
     &::placeholder {
       font-family: "Montserrat", sans-serif;
       font-weight: 400;
@@ -48,6 +41,8 @@
     background-image: url(../images/arrow_black.svg);
     background-repeat: no-repeat;
     background-position: center;
+
+    @include hover(transform, scale(1.05));
 
     @include onTablet {
       width: 70px;
