--- a/src/styles/blocks/galary.scss
+++ b/src/styles/blocks/galary.scss
@@ -2,8 +2,9 @@
   &__content {
     display: flex;
     margin-bottom: 20px;
-    overflow-x: scroll;
-    overflow-y: hidden;
+    gap: 0;
+    // overflow-x: scroll;
+    // overflow-y: hidden;
 
     @include onTablet {
       margin-bottom: 32px;
@@ -14,7 +15,20 @@
       grid-template-rows: 600px 360px;
       gap: 30px;
       margin-bottom: 0;
-      overflow: visible;
+      // overflow: visible;
+    }
+  }
+
+  &__image-wrapper {
+    display: none;
+
+    @include onDesktop {
+      display: block;
+    }
+
+    &--active {
+      display: block;
+      margin: 0 auto;
     }
   }
 
