--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/mixin.scss";
+@import "./utils/grid.scss";
+@import "./utils/reset.scss";
 
-body {
-  background: $c-gray;
-}
+@import "./page.scss";
+@import "./icon.scss";
+@import "./logo.scss";
+@import "./header.scss";
+@import "./container.scss";
+@import "./menu.scss";
+@import "./footer.scss";
+@import "./events.scss";
+@import "./gallery.scss";
+@import "./follow.scss";
