--- a/src/styles/follow.scss
+++ b/src/styles/follow.scss
@@ -99,15 +99,28 @@
     }
 
     @include onTablet {
-      max-width: 374px;
+      width: 374px;
     }
 
     @include onDesktop {
-      max-width: 470px;
+      width: 470px;
     }
 
     @include onTablet {
       height: 70px;
+    }
+  }
+
+  .subscribe {
+
+    @include onTablet {
+      gap: 16px;
+      width: 374px;
+    }
+
+    @include onDesktop {
+      gap: 30px;
+      width: 470px;
     }
   }
 
