--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -20,6 +20,7 @@
     width: 100%;
     object-position: top;
     object-fit: cover;
+    transition: transform 0.3s;
 
     &:nth-child(2) {
       display: none;
@@ -35,6 +36,10 @@
 
     @include onDesktop {
       height: 600px;
+    }
+
+    &:hover {
+     transform:  scale(1.05);
     }
   }
 
