--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -40,6 +40,7 @@
     @include onDesktop() {
       background-size: 725px 655px;
       padding-bottom: 119px;
+      max-width: 600px;
     }
   }
 
