--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -103,6 +103,7 @@
 
     @include onDesktop {
       font-size: 22px;
+      width: 128px;
     }
   }
 
@@ -118,7 +119,7 @@
     @include onTablet {
       display: grid;
       grid-template-columns: repeat(2, minmax(144px, 170px));
-      column-gap: 30px;
+      column-gap: 50px;
     }
   }
 
@@ -128,5 +129,9 @@
     @include onTablet() {
       padding-top: 40px;
     }
+  }
+
+  &__open-hours {
+    width: 168px;
   }
 }
