--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -96,11 +96,15 @@
     &::after {
       content: "";
       display: block;
-      margin-top: 13px;
-      margin-left: 20px;
-      height: 15px;
-      width: 15px;
+      margin-top: 10px;
+      margin-left: 15px;
+      height: 10px;
+      width: 10px;
       background-color: red;
+
+      @include onTablet {
+        margin-top: 15px;
+      }
     }
 
     &--highlighted-event {
