--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -15,6 +15,7 @@
   transform: translateY(-100%);
 
   &__content {
+
     @include onTablet {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -51,7 +52,7 @@
 
   &__top {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     border-bottom: 1px solid #fff;
     padding-bottom: 24px;
     margin-bottom: 24px;
@@ -76,6 +77,11 @@
     display: flex;
     gap: 28px;
     margin-right: 40px;
+    padding-left: 20px;
+
+    @include onTablet {
+      padding-left: 0;
+    }
 
     @include onDesktop {
       gap: 50px;
