--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -2,7 +2,7 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 20px;
-  padding-bottom: 20px;
+  // padding-bottom: 20px;
   
   @include onTablet {
     padding: 0 34px;
