--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,3 +1,3 @@
-@import "utils/vars";
-@import "utils/mixins";
-@import "utils/extends";
+@import "./utils/__variables";
+@import "./utils/_resolution-mixins";
+@import "./utils/_font-mixins";
