--- a/src/styles/blocks/galery.scss
+++ b/src/styles/blocks/galery.scss
@@ -62,19 +62,29 @@
     }
 
     &__image {
-      object-fit: cover;
       object-position: center;
+      height: 100%;
+      width: 100%;
 
-      &--line-1 {
-        margin: 0 0 30px;
+      transition: $standard-transition;
 
-        height: 600px;
-        width: 100%;
+      &:hover {
+        transform: $scale;
       }
 
-      &--line-2 {
-        height: 300px;
-        width: 100%;
+      &--container {
+        &--line-1 {
+          overflow: hidden;
+          margin: 0 0 30px;
+          height: 600px;
+
+        }
+
+        &--line-2 {
+          overflow: hidden;
+          height: 300px;
+          width: 100%;
+        }
       }
     }
   }
