2nd round of bug fixes completed

--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -84,6 +84,8 @@
     padding: 0 0 0 24px;
     outline: 0;
 
+    cursor: pointer;
+
     @include onTablet {
       height: 70px;
       width: calc(100% - 16px);
@@ -126,6 +128,8 @@
   }
 
   &__button {
+    cursor: pointer;
+
     box-sizing: border-box;
     border: 1px solid $orange-color;
 
