--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/variables";
+@import "./utils/mixins";
+@import "./utils/extends";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page";
+@import "./blocks/grid";
+
+@import "./blocks/header";
+@import "./blocks/button";
+@import "./blocks/menu";
+@import "./blocks/logo";
+@import "./blocks/navigation";
+@import "./blocks/nav";
+@import "./blocks/actual-events";
+@import "./blocks/memories-and-dreams";
+@import "./blocks/from-romantism";
+@import "./blocks/gallery";
+@import "./blocks/slider";
