--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,26 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+%montserrat {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+}
+
+%ibm {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+}
+
+%container {
+  max-width: $max-width;
+  margin: 0 auto;
+}
+
+%paddings {
+  padding: 0 20px;
+
+  @include onTablet {
+    padding: 0 40px;
+  }
+
+  @include onDesktop {
+    padding: 0 50px;
+  }
 }
