--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
 @import "utils";
-@import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/header.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/button.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/schedule.scss";
+@import "./blocks/main.scss";
+@import "./blocks/events.scss";
+@import "./blocks/lesson.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/swiper.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/form-field.scss";
+@import "./blocks/footer.scss";
