--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -4,6 +4,7 @@
   font-size: 14px;
   line-height: 150%;
   font-weight: 400;
+  overflow-x: hidden;
   scroll-behavior: smooth;
 
   &__body {
@@ -40,7 +41,7 @@
 
     &:target {
       transform: translateY(0);
-      z-index: 1;
+      z-index: 2;
     }
   }
 
@@ -52,6 +53,7 @@
       bottom: 0;
       right: 0;
       display: block;
+      z-index: 1;
       background-color: rgba(0, 0, 0, 0.5);
     }
   }
