--- a/src/styles/blocks/museum.scss
+++ b/src/styles/blocks/museum.scss
@@ -83,6 +83,13 @@
   &__events-link {
     display: none;
 
+    transition: transform 1s;
+
+    &:hover {
+      transform: scale(1.2) rotate(-90deg);
+      color: $green-color;
+    }
+
     @include laptop {
       display: block;
       position: absolute;
