--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -11,6 +11,10 @@
     background: $c-white;
 
     &--with-menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
       overflow: hidden;
     }
   }
