--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,6 +5,12 @@
   }
 }
 
+@mixin onSmTablet {
+  @media (min-width: $scr-sm-tab) {
+    @content;
+  }
+}
+
 @mixin onTablet {
   @media (min-width: $scr-tab) {
     @content;
