--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,8 +2,8 @@ $scr-lrg-desk: 1440px;
 $scr-desk: 1280px;
 $scr-sm-desk: 1024px;
 $scr-tab: 768px;
+$scr-sm-tab: 640px;
 
-$hgt-header-img: 300px;
 $hgt-header-img-tab: 384px;
 $hgt-header-img-desk: 655px;
 
