--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -7,6 +7,15 @@
     margin-bottom: 40px;
     text-align: center;
     color: $c-h2;
+
+    @include onTablet {
+      margin-bottom: 48px;
+      text-align: left;
+    }
+
+    @include onSmDesktop {
+      margin-bottom: 56px;
+    }
   }
 
   &__list {
@@ -35,6 +44,10 @@
       content: "";
       display: block;
       padding-bottom: 75%;
+
+      @include onSmDesktop {
+        padding-bottom: 77.7%;
+      }
     }
 
     @include onTablet {
@@ -63,7 +76,7 @@
   }
 
   &__info {
-    margin-bottom: 15px;
+    margin-bottom: 12px;
 
     @include flexDJI($fd: row, $jc: space-between, $ai: center);
 
@@ -99,21 +112,24 @@
     padding-right: 12px;
 
     color: $c-h3;
+    --decor-size: 10px;
+
+    @include onTablet {
+      margin-bottom: 16px;
+      --decor-size: 15px;
+    }
 
     &--decor::after {
       content: "";
+
       position: absolute;
       top: 50%;
       left: 100%;
       display: block;
-      width: 10px;
-      height: 10px;
+      width: var(--decor-size);
+      height: var(--decor-size);
       transform: translateY(-50%);
       background-color: $c-decor;
-    }
-
-    @include onTablet {
-      margin-bottom: 16px;
     }
   }
 
