Museum landing - Fifth commit

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -71,6 +71,23 @@
     }
   }
 
+  &__image-definition {
+    @extend %pic-definition;
+
+    &--top {
+      top: 0;
+    }
+
+    &--bottom {
+      bottom: 0;
+    }
+  }
+
+  &__image-container:hover &__image-definition {
+    opacity: 0.8;
+    box-shadow: inset 0 0 50px 50px $c-white, 0 0 10px 10px $c-white;
+  }
+
   &__item-info {
     align-items: center;
   }
