--- a/src/styles/blocks/lesson.scss
+++ b/src/styles/blocks/lesson.scss
@@ -42,6 +42,24 @@
     object-position: center;
   }
 
+  &__photo-definition {
+    z-index: 1;
+    @extend %pic-definition;
+
+    &--top {
+      top: 0;
+    }
+  
+    &--bottom {
+      bottom: 0;
+    }
+  }
+
+  &:hover &__photo-definition {
+    opacity: 0.8;
+    box-shadow: inset 0 0 50px 50px $c-white, 0 0 10px 10px $c-white;
+  }
+
   &__information {
     margin: 0 auto;
     max-width: 570px;
