--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -65,3 +65,15 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+
+%pic-definition {
+  position: absolute;
+  left: 0;
+  padding: 4px;
+  font-weight: $fw-semibolt;
+  text-align: center;
+  color: $c-text;
+  border-radius: 4px;
+  opacity: 0;
+  transition: $act-time cubic-bezier(0.51, -0.04, 0.17, 0.95);
+}
