--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -74,4 +74,21 @@
       padding-bottom: 100%;
     }
   }
+
+  &__painting-definition {
+    @extend %pic-definition;
+
+    &--top {
+      top: 0;
+    }
+
+    &--bottom {
+      bottom: 0;
+    }
+  }
+
+  &__painting-container:hover &__painting-definition {
+    opacity: 0.8;
+    box-shadow: inset 0 0 50px 50px $c-white, 0 0 10px 10px $c-white;
+  }
 }
