--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -39,6 +39,23 @@
     object-position: center;
   }
 
+  &__img-definition {
+    @extend %pic-definition;
+
+    &--top {
+      top: 0;
+    }
+
+    &--bottom {
+      bottom: 0;
+    }
+  }
+
+  &__img-container:hover &__img-definition {
+    opacity: 0.8;
+    box-shadow: inset 0 0 50px 50px $c-white, 0 0 10px 10px $c-white;
+  }
+
   &__pagination {
     width: 100%;
     margin: 0 auto;
