--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
-$c-gray: #eee;
+$font-family-ibm: "IBM Plex Sans", sans-serif;
+$font-family-montserrat: "Montserrat", sans-serif;
+
+$color-black: #0f0e08;
+$color-green: #1a5a4c;
+
+$columns-tablet: 6;
+$columns-desktop: 12;
+
+$header-padding-top: 9px;
+$header-height: 300px;
