--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,6 +1,13 @@
 .page {
   scroll-behavior: smooth;
 
+  ::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+    background-color: transparent;
+    border: none;
+  }
+
   &__body {
     position: relative;
     background-color: $main-bg;
