--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,9 +10,17 @@
 @import "./blocks/menu";
 @import "./blocks/logo";
 @import "./blocks/navigation";
+@import "./blocks/weekdays";
 @import "./blocks/nav";
 @import "./blocks/actual-events";
 @import "./blocks/memories-and-dreams";
 @import "./blocks/from-romantism";
 @import "./blocks/gallery";
 @import "./blocks/slider";
+@import "./blocks/subscribe-us";
+@import "./blocks/footer";
+@import "./blocks/form-field";
+@import "./blocks/outer-links";
+@import "./blocks/contacts";
+@import "./blocks/arrow-up";
+@import "./blocks/author";
