--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -19,6 +19,8 @@
   }
 
   &__item {
+    display: grid;
+    width: 100%;
 
     @for $start from 1 through 2 {
       @for $end from $start through 2 {
@@ -60,6 +62,12 @@
       }
     }
 
+    &--row-3 {
+      @include onDesktop {
+        grid-row: 1/1;
+      }
+    }
+
     &--for-navigation {
       grid-template-rows: auto auto;
       grid-template-columns: 1fr;
@@ -72,6 +80,10 @@
         border-top: none;
         border-left: 1px solid #fff;
       }
+    }
+
+    &--center-position {
+      display: grid;
     }
   }
 }
