--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -1,56 +1,25 @@
 .navigation {
   background-color: $second-bg;
   box-sizing: border-box;
-  padding: 30px 25px 27px;
+  width: 100%;
+  padding: 30px 0 27px;
+
+  &__content {
+    @extend %paddings;
+  }
 
   @include onTablet {
     height: 50vh;
-    padding: 40px 45px;
+    padding: 40px 0;
   }
 
   @include onDesktop {
-    padding: 60px 45px 48px;
+    padding: 60px 0 48px;
   }
 
   &__top {
     display: grid;
     grid-template-columns: 13px 1fr;
     justify-items: center;
-  }
-
-  &__days {
-    display: grid;
-
-    @include onTablet {
-      grid-template-rows: auto;
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    &--margins {
-      margin: 20px 0 16px;
-
-      @include onTablet {
-        margin: 20px 0 0;
-      }
-    }
-  }
-
-  &__subtitle {
-    margin: 0;
-    @extend %ibm;
-    @include text-decoration ($font-w-s, $font-s-s, $lh5, $main-bg);
-    opacity: 0.8;
-    grid-row: 1;
-    grid-column: 1;
-  }
-
-  &__work-days {
-    margin: 0;
-    @extend %ibm;
-    @include text-decoration ($font-w-l, $font-s-s, $lh6, $main-bg);
-  }
-
-  &__work-day {
-    opacity: 0.8;
   }
 }
