--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -21,6 +21,11 @@
     text-decoration: none;
     @extend %ibm;
     @include text-decoration ($font-w-s, $font-s-s, $lh6, $color-2);
+    transition: 0.3s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
 
     &:not(:first-child):not(:last-child) {
       margin: 5px 0;
