--- a/src/styles/blocks/form-field.scss
+++ b/src/styles/blocks/form-field.scss
@@ -9,13 +9,12 @@
     width: 230px;
     height: 50px;
     @extend %montserrat;
-    @include text-decoration ($font-w-s, $font-s-s, $lh1, $color-1);
+    @include text-decoration ($font-w-s, $font-s-s, $lh1, $color-3);
 
     &:hover {
       border: 1px solid $color-5;
     }
 
-    &:active,
     &:focus {
       @extend %montserrat;
       @include text-decoration ($font-w-s, $font-s-s, $lh1, $color-1);
@@ -40,6 +39,9 @@
     box-sizing: border-box;
     border: 1px solid transparent;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
     width: 50px;
     height: 50px;
     background-color: $color-5;
@@ -58,5 +60,9 @@
         margin-left: 30px;
       }
     }
+  }
+
+  &__img {
+    width: 70%;
   }
 }
