--- a/src/styles/blocks/author.scss
+++ b/src/styles/blocks/author.scss
@@ -5,6 +5,18 @@
   @extend %ibm;
   @include text-decoration ($font-w-xs, $font-s-xs, $lh3, $color-2);
 
+  &--margins {
+    margin: 0 0 70px;
+
+    @include onTablet {
+      margin: 0 0 35px;
+    }
+
+    @include onDesktop {
+      margin: 100px 0 35px;
+    }
+  }
+
   @include onTablet {
     flex-direction: row;
     justify-content: space-between;
