--- a/src/styles/blocks/form-field.scss
+++ b/src/styles/blocks/form-field.scss
@@ -8,6 +8,7 @@
     border: 1px solid transparent;
     width: 230px;
     height: 50px;
+    padding-left: 24px;
     @extend %montserrat;
     @include text-decoration ($font-w-s, $font-s-s, $lh1, $color-3);
 
@@ -27,6 +28,7 @@
 
     @include onDesktop {
       width: 470px;
+      padding-left: 32px;
     }
 
     &::placeholder {
