--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,10 +3,12 @@
   &__title {
     margin: 0;
     text-transform: uppercase;
+    text-align: center;
     @extend %montserrat;
     @include text-decoration ($font-w-xl, $font-t-s-m, $lh13, $color-1);
 
     @include onTablet {
+      text-align: left;
       @include text-decoration ($font-w-xl, $font-t-s-xl, $lh15, $color-1);
     }
 
@@ -87,7 +89,7 @@
     transition: 0.3s;
 
     &:hover {
-      box-shadow: 0 0 13px 4px $second-bg;
+      transform: scale(1.2);
     }
   }
 }
