--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -55,6 +55,18 @@
     @include onDesktop {
       display: none;
     }
+
+    &--margin-top {
+      margin-top: 20px;
+
+      @include onTablet {
+        margin-top: 32px;
+      }
+
+      @include onDesktop {
+        margin-top: 0;
+      }
+    }
   }
 
   &__dot {
