--- a/src/styles/blocks/actual-events.scss
+++ b/src/styles/blocks/actual-events.scss
@@ -32,6 +32,11 @@
 
   &__img {
     width: 100%;
+    transition: 0.3s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &__info {
@@ -50,7 +55,7 @@
     }
 
     &--margins {
-      margin: 16px 0 10px;
+      margin: 15px 0;
 
       @include onTablet {
         margin: 40px 0 30px;
