--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -1,7 +1,7 @@
 .button {
   box-sizing: border-box;
   border: 1px solid $second-bg;
-  width: 280px;
+  width: 100%;
   height: 50px;
   background-color: $second-bg;
   display: flex;
@@ -20,7 +20,7 @@
   }
 
   &__text {
-    width: 230px;
+    width: 80%;
     background-color: $main-bg;
     display: flex;
     justify-content: center;
@@ -32,7 +32,7 @@
   }
 
   &__img {
-    width: 50px;
+    width: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
