--- a/src/styles/blocks/from-romantism.scss
+++ b/src/styles/blocks/from-romantism.scss
@@ -71,6 +71,12 @@
     text-align: center;
     display: grid;
     grid-column: 1/3;
+
+    transition: 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__subtitle-link {
