--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -13,6 +13,18 @@
     background-color: $main-bg;
     margin: 0;
     box-sizing: border-box;
+
+    &--with-navigation {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 3;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background-color: gray;
+      opacity: 0.9;
+    }
   }
 
   &__container {
@@ -33,6 +45,7 @@
     @include onDesktop {
       position: absolute;
       right: 0;
+      z-index: 2;
     }
   }
 
@@ -41,6 +54,7 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 3;
     transform: translateY(-100%);
     transition: 0.3s;
 
