--- a/src/styles/blocks/main-title.scss
+++ b/src/styles/blocks/main-title.scss
@@ -157,6 +157,15 @@
   }
 
   &__end {
+    margin-bottom: 180px;
+
+    @include onTablet {
+      margin-bottom: 200px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 300px;
+    }
 
     &--photo {
       display: block;
@@ -172,15 +181,12 @@
       background: #fff;
       box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
-      margin-bottom: 100px;
-
       @include onTablet {
         padding: 45px 55px;
       }
 
       @include onDesktop {
         padding: 45px 100px;
-        margin-bottom: 200px;
       }
     }
 
