--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -49,6 +49,7 @@
       line-height: 36px;
       text-align: center;
       color: #0f0e08;
+      margin: 0 0 40px;
 
       @include onTablet {
         font-size: 48px;
@@ -56,6 +57,7 @@
 
         display: flex;
         justify-content: flex-start;
+        margin: 0 0 50px;
       }
 
       @include onDesktop {
@@ -64,6 +66,7 @@
 
         display: flex;
         justify-content: flex-start;
+        margin: 0 0 50px;
       }
     }
   }
