--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,15 +1,11 @@
 .gallery {
   display: flex;
   margin: 0 auto;
+  column-gap: 0;
 
   @include onDesktop {
     display: grid;
-  }
-
-  &__none {
-    @include onDesktop {
-      display: none;
-    }
+    column-gap: 30px;
   }
 
   &__img {
@@ -35,32 +31,27 @@
   }
 
   &__small {
-    position: relative;
-    
-    @include onTablet {
-      display: block;
-      margin: 0 auto;
-      column-gap: none;
-    }
+    display: block;
+    margin: 0 auto;
 
+    @include onDesktop {
+      margin: 0;
+    }
   }
 
   &__slider {
-    width: 100%;
-    height: 510px;
-    position: relative;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+  }
+
+  &__all--none {
+    display: none;
   }
 
   &__phone {
-    position: absolute;
-    height: 410px;
-    width: 280px;
-    margin: 0 auto;
-
-    @include onTablet {
-      position: relative;
-    }
 
     @include onDesktop {
       height: 600px;
