--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,6 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./utils/variables";
+@import "./utils/mixins";
+@import "./utils/body";
+@import "./utils/grid";
+@import "./utils/header-menu";
+@import "./utils/header_top";
