--- a/src/styles/utils/_header-menu.scss
+++ b/src/styles/utils/_header-menu.scss
@@ -17,6 +17,7 @@
   &__container {
     margin: 27px 20px 0;
     display: flex;
+    justify-content: space-between;
 
     @include onTablet {
       margin: 40px 35px;
@@ -25,7 +26,6 @@
 
   &__cross {
     display: flex;
-
     &__item {
       width: 32px;
       height: 32px;
@@ -37,6 +37,7 @@
   &__list {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     padding: 0;
 
     @include onTablet {
@@ -49,8 +50,10 @@
       display: flex;
       flex-direction: column;
 
+
       @include onTablet {
         flex-direction: row;
+        justify-content: space-between;
       }
     }
 
@@ -77,7 +80,8 @@
   &__stick {
     @include onTablet {
       display: flex;
-      min-width: 65px;
+      justify-content: center;
+      min-width: 15px;
     }
 
     &__item {
